# EquityLens

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: forecast.py
data/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.jsx.new  styles.css
notebooks/: README.md
reports/: README.md
src/stock_future_analysis/: __init__.py  api.py  cli.py  config.py  data.py  features.py  model.py
src/stock_future_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_smoke.py
