[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-future-analysis"
version = "0.1.0"
description = "Stock future analysis and prediction"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
app = "main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
